2005-08-01	Istvan Varga	<ivarga@csounds.com>
	* Minor fixes in DSSI opcodes (still have problems)
	* Engine/rdorch.c, Engine/entry1.c, Opcodes/uggab.c:
	  minor parser changes, including the addition of a new code (fffb)
	  for selecting opcode name based on the first input argument (i-, k-,
	  and a-rate, but not constant)
	* Engine/insert.c:
	  fixes related to re-initialisation of user defined opcodes
	* Engine/Entry2.c, H/str_ops.h, OOps/str_ops.c:
	  new opcodes: printf, printf_i
	* Engine/Entry2.c, H/insert.h, OOps/goto_ops.c:
	  new opcodes: loop_l, loop_le, loop_g, loop_ge

2005-07-31  John ff  <jpff@codemist.co.uk>

	* SConstruct (opts): Added buildDSSI option

2005-07-23  John ff  <jpff@codemist.co.uk>

	* Opcodes/bowedbar.c (bowedbarset): ADSR not initialised
	correctly.  Still has over hash attack.  Also adjust gain.

2005-07-17	Istvan Varga	<ivarga@csounds.com>
	* Engine/rdorch.c: fixed crash on missing endin
	* Engine/rdorch.c, Engine/sread.c: fixed error message on $ without
	  macro name
	* H/diskin.h, OOps/diskin.c: fixed soundout crash on Win32 with doubles

2005-07-15	Istvan Varga	<ivarga@csounds.com>
	* removed use of cs.h; replaced with csoundCore.h
	* util1/sortex/smain.c, util1/sortex/xmain.c: fixed compiler warnings
	* OOps/diskin2.c: minor fixes in soundin and diskin2
	* Engine/entry1.c: added soundouts; diskin extended to 24 channels
	* H/diskin.h, OOps/diskin.h:
	  replaced diskin with new implementation based on diskin2 (should
	  fix many problems, and allows up to 24 channels instead of the
	  original limit of 4)
	  fixed bug in soundout that resulted in not writing the last buffer
	  to disk
	  implemented soundouts opcode (stereo soundout)
	* Engine/fgens.c: fixed memory error in GEN20
	* Engine/rdorch.c: minor fix in parsing of comments

2005-07-13	Istvan Varga	<ivarga@csounds.com>
	* InOut/midirecv.c: reset controllers 7-11 to 0 in raw controller mode

2005-06-25 Victor  Lazzarini <Victor.Lazzarini@nuim.ie>
